--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
       <form action="https://fwdform.herokuapp.com/user/d768c672-6ffb-4142-a5fe-e98edcfdff92" method="post">
         <div id="contact-contain">
           <div class="contact-form">
+            <h1>Contact Us</h1>
+          </div>
+          <div class="contact-form">
             <input type="text" name="name" id="name" placeholder="Name">
           </div>
           <div class="contact-form">
@@ -131,6 +134,8 @@
       </form>
       <div id="lp-info-contain">
         <div id="lp-info">
+          <p>One Corporate Commons<br>100 Commons Boulevard, Suite 300<br>New Castle, DE 19720</p>
+          <p>(302) 325-3555<br>FAX&nbsp;.&nbsp;(302) 325-3556</p>
         </div>
       </div>
       <div class="row">
