basic modal for bios

--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
       <div id="info-blocks">
         <div class="info-block">
           <div class="inner">One
-            <div class="showme">Ah Ha</div>
+            <div class="showme">Ah Ha<br>
+              <a href="#" data-reveal-id="one">Click</a>
+              <div id="one" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+                <h2 id="modalTitle">Awesome. I have it.</h2>
+                <p class="lead">Your couch.  It is mine.</p>
+                <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+                <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="info-block"><div class="inner">One</div></div>
@@ -110,7 +118,7 @@
     </section>
   
     <div class="footer-section">
-      <form action="https://fwdform.herokuapp.com/user/d768c672-6ffb-4142-a5fe-e98edcfdff92" method="post">
+      <form action="http://formspree.io/rwboyer@mac.com" method="post">
         <div id="contact-contain">
           <div class="contact-form">
             <h1>Contact Us</h1>
@@ -122,7 +130,7 @@
             <input type="text" name="email" id="email" placeholder="Email">
           </div>
           <div class="contact-form">
-            <input type="text" id="phone" placeholder="Phone">
+            <input type="text" name="phone" id="phone" placeholder="Phone">
           </div>
           <div class="contact-form">
             <textarea name="message" placeholder="Message..."></textarea>
