fix column for white section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <section id="attorneys" class = "white-info">
       <div id="att-info">
-        <div class="att-info-inner">
+        <div id="att-info-inner">
           <h1>Our Attorneys</h1>
           <p>If you want a law firm that will be there for you from beginning to end, please contact one of the lawyers at our firm. We will be glad to discuss with you how we can help you with your difficult legal questions.</p>
         </div>
