attorney info boxes

--- a/index.html
+++ b/index.html
@@ -66,9 +66,14 @@
       <div class="gray-block"></div>      
       <div id="info-blocks">
         <div class="info-block">
-          <div class="inner">One
-            <div class="showme">Ah Ha<br>
-              <a href="#" data-reveal-id="one">Click</a>
+          <div class="inner">
+            <img src="/images/LEESnewweb-sq.jpg">
+            <h3>Don L. Logan</h3>
+            <div class="showme">
+              <p>(302)&nbsp;325-3555&nbsp;x311</p>
+              <a href="#" class="bio" data-reveal-id="one">Read Don's Bio</a>
+              <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
+              <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="one" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <h2 id="modalTitle">Awesome. I have it.</h2>
                 <p class="lead">Your couch.  It is mine.</p>
@@ -77,6 +82,7 @@
               </div>
             </div>
           </div>
+          <div class="info-bottom-arrow"><i class="fa fa-angle-down"></i></div>
         </div>
         <div class="info-block"><div class="inner">One</div></div>
         <div class="info-block"><div class="inner">One</div></div>
