bio modals for large screens

--- a/index.html
+++ b/index.html
@@ -74,10 +74,47 @@
               <a href="#" class="bio" data-reveal-id="one">Read Don's Bio</a>
               <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
               <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-              <div id="one" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-                <h2 id="modalTitle">Awesome. I have it.</h2>
-                <p class="lead">Your couch.  It is mine.</p>
-                <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+              <div id="one" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+                <div class="bio-header">
+                  <h2 id="modalTitle">Don&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h2>
+                </div>
+                <div class="bio-info">
+                  <div class="bio-cv">
+                    <p>Over the past twelve years Vicky Petrone has developed a regional practice concentrated on construction law. Her clients include owners, developers, contractors, subcontractors, architects and engineers. Vicky advises clients on transactional and litigation needs including corporate formation, contract development, review and negotiation, construction defects, payment claims and mechanic’s liens, public bidding and prevailing wage law, surety claims, scheduling and delay claims, employee manuals and employment disputes, insurance coverage and claims and alternative dispute resolution. Her practice spans state and federal courts as well as private and AAA mediation and arbitration.</p>
+                    <p>
+                    <em>BAR ADMISSIONS</em><br>
+                    U.S. District Court for the District of Delaware<br>
+                    Delaware<br>
+                    Pennsylvania<br>
+                    New Jersey (inactive)<br>
+                    </p>
+                    <p>
+                    <em>MEMBERSHIPS</em><br>
+                    Associated Builders and Contractors (ABC) and member Legislative and Legal Rights Committee<br>
+                    Commercial-Industrial Realty Council (CIRC)<br>
+                    Delaware Contractors’ Association (DCA)<br>
+                    Delaware State Bar Association<br>
+                    </p>
+                    <p>
+                    <em>LEADERSHIP</em><br>
+                    Committee of 100 - Board of Directors and Chair, Annual Meeting and Auction (2014, 2015)<br>
+                    Saint Edmond’s Academy - Board of Directors<br>
+                    Silverside Swim Club - Board of Directors<br>
+                    </p>
+                    <p>
+                    <em>EDUCATION</em><br>
+                    Widener University School of Law, J.D., 2001<br>
+                    Moe Levine Trial Advocacy Honor Society Member and Board Member<br>
+                    Phi Delta Phi Legal Fraternity Member<br>
+                    University of Delaware, B.S., Civil Engineering, 1995<br>
+                    </p>                  
+                  </div>
+                  <div class="bio-extra">
+                    <img src="/images/LEESnewweb.jpg">
+                    <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
+                    <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                  </div>
+                </div>
                 <a class="close-reveal-modal" aria-label="Close">&#215;</a>
               </div>
             </div>
