change Patrone to Petrone

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Logan And Patrone</title>
+    <title>Logan And Petrone</title>
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -16,7 +16,7 @@
     <!-- TITLE AREA & LOGO -->
     <ul class="title-area">
         <li class="name">
-            <h1>Logan & Patrone, LLC</h1>
+            <h1>Logan & Petrone, LLC</h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
     </ul> <!-- END TITLE AREA & LOGO -->
@@ -73,7 +73,7 @@
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x311</p>
               <a href="#" class="bio" data-reveal-id="one">Read Don's Bio</a>
-              <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
+              <a href="mailto:don@loganpetrone.com"><i class="fa fa-envelope-o"></i></a>
               <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="one" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
@@ -112,7 +112,7 @@
                   </div>
                   <div class="bio-extra">
                     <img src="/images/LEESnewweb.jpg">
-                    <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
+                    <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
                     <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
@@ -126,15 +126,15 @@
         <div class="info-block">
           <div class="inner">
             <img src="/images/patrone-sq.jpg">
-            <h3>Victoria K. Patrone</h3>
+            <h3>Victoria K. Petrone</h3>
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x311</p>
               <a href="#" class="bio" data-reveal-id="two">Read Victoria's Bio</a>
-              <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
+              <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
               <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="two" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
-                  <h2 id="modalTitle">Victoria&nbsp;K.&nbsp;Patrone,&nbsp;Esquire</h2>
+                  <h2 id="modalTitle">Victoria&nbsp;K.&nbsp;Petrone,&nbsp;Esquire</h2>
                 </div>
                 <div class="bio-info">
                   <div class="bio-cv">
@@ -169,7 +169,7 @@
                   </div>
                   <div class="bio-extra">
                     <img src="/images/patrone.jpg">
-                    <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
+                    <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
                     <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
@@ -187,7 +187,7 @@
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x311</p>
               <a href="#" class="bio" data-reveal-id="three">Read Don's Bio</a>
-              <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
+              <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
               <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="three" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
@@ -226,7 +226,7 @@
                   </div>
                   <div class="bio-extra">
                     <img src="/images/LEESnewweb.jpg">
-                    <a href="mailto:don@loganpatrone.com"><i class="fa fa-envelope-o"></i></a>
+                    <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
                     <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
@@ -299,7 +299,7 @@
         </div>
       </form>
       <div id="contact-success" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-        <h2 id="modalTitle">Thank You For Contacting Logan & Patrone, LLC</h2>
+        <h2 id="modalTitle">Thank You For Contacting Logan & Petrone, LLC</h2>
         <p class="lead">One of our legal professionals will be in touch promptly.</p>
         <p>The attorneys at Logan & Petrone, LLC provide corporate and litigation services to all parties involved in the construction process; owners, contractors, subcontractors, suppliers, architects, engineers and sureties. Our attorneys are admitted to practice in Delaware, Pennsylvania, Maryland and New Jersey.</p>
         <a class="close-reveal-modal" aria-label="Close">&#215;</a>
