minor modal changes

--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
     <div class="out-of-grid" id="home">
       <div class="content-wrap">
         <div class="overlay-content">
-        	<h1>PROGRESS</h1>
         </div>
       </div>
     	<img src="/images/tab.png">
       <div id="home-heading">
-        <h1>Attorneys At Law</h1>    
+        <h3>Attorneys At Law</h3>    
       </div>
     </div>
     
@@ -59,7 +58,7 @@
     <section id="attorneys" class = "white-info">
       <div id="att-info">
         <div id="att-info-inner">
-          <h1>Our Attorneys</h1>
+          <h3>Our Attorneys</h3>
           <p>If you want a law firm that will be there for you from beginning to end, please contact one of the lawyers at our firm. We will be glad to discuss with you how we can help you with your difficult legal questions.</p>
         </div>
       </div>
@@ -77,7 +76,7 @@
               <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="one" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
-                  <h2 id="modalTitle">Don&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h2>
+                  <h3 id="modalTitle">Don&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h3>
                 </div>
                 <div class="bio-info">
                   <div class="bio-cv">
@@ -134,7 +133,7 @@
               <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="two" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
-                  <h2 id="modalTitle">Victoria&nbsp;K.&nbsp;Petrone,&nbsp;Esquire</h2>
+                  <h3 id="modalTitle">Victoria&nbsp;K.&nbsp;Petrone,&nbsp;Esquire</h3>
                 </div>
                 <div class="bio-info">
                   <div class="bio-cv">
@@ -191,7 +190,7 @@
               <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="three" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
-                  <h2 id="modalTitle">Don&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h2>
+                  <h3 id="modalTitle">Don&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h3>
                 </div>
                 <div class="bio-info">
                   <div class="bio-cv">
@@ -243,8 +242,9 @@
     <section id="practice">
       <div id="practice-contain" data-equalizer>      	
         <div id="description" data-equalizer-watch>
-          <h2>Practice Overview</h2>
+          <h3>Practice Overview</h3>
           <p>Logan & Petrone, LLC represents clients throughout Delaware, Pennsylvania, Maryland and New Jersey.</p>
+          <p><em>Our areas of practice include:</em></p>
           <ul>
             <li>Construction Law</li>
             <ul>
@@ -279,7 +279,7 @@
         <input type="hidden" name="_next" value="http://logan-patrone.s3-website-us-east-1.amazonaws.com/?showModal=yes"/>
         <div id="contact-contain">
           <div class="contact-form">
-            <h1>Contact Us</h1>
+            <h3>Contact Us</h3>
           </div>
           <div class="contact-form">
             <input type="text" name="name" id="name" placeholder="Name">
