--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Logan And Petrone</title>
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" href="images/favico.png">
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
@@ -70,49 +71,33 @@
             <img src="/images/LEESnewweb-sq.jpg">
             <h3>Don L. Logan</h3>
             <div class="showme">
-              <p>(302)&nbsp;325-3555&nbsp;x311</p>
+              <p>(302)&nbsp;325-3555&nbsp;x308</p>
               <a href="#" class="bio" data-reveal-id="one">Read Don's Bio</a>
               <a href="mailto:don@loganpetrone.com"><i class="fa fa-envelope-o"></i></a>
-              <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+              <a href="https://www.linkedin.com/in/don-logan-5532654" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="one" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
                   <h3 id="modalTitle">Don&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h3>
                 </div>
                 <div class="bio-info">
                   <div class="bio-cv">
-                    <p>Over the past twelve years Vicky Petrone has developed a regional practice concentrated on construction law. Her clients include owners, developers, contractors, subcontractors, architects and engineers. Vicky advises clients on transactional and litigation needs including corporate formation, contract development, review and negotiation, construction defects, payment claims and mechanic’s liens, public bidding and prevailing wage law, surety claims, scheduling and delay claims, employee manuals and employment disputes, insurance coverage and claims and alternative dispute resolution. Her practice spans state and federal courts as well as private and AAA mediation and arbitration.</p>
+                    <p>Donald L. Logan, concentrates his practice in the areas of construction law, commercial litigation, commercial transactions and serving as a private mediator or arbitrator. Don’s practice includes assisting clients in entity formation, contract development and negotiation, perfecting mechanic’s liens, public bid protests, payment and performance bond claims and delay claims.  Clients include owner’s, general contractors, construction managers, subcontractors, suppliers and vendors, insurance carriers and sureties.</p>
+                    <p>Don earned his B.S. degree from the University of Lowell and his J.D. from Widener University School of Law.  He is admitted to practice in Delaware and Maryland and the U.S. District Court for the District of Delaware and the U.S. District Court for the District of Maryland.</p>
+                    <p>Don served on active duty in the US Navy and served in Vietnam in 1968-1969.  He also served in the Delaware Air National Guard.  He served as Chairman of the Delaware Vietnam Veterans Leadership Program.</p>
                     <p>
-                    <em>BAR ADMISSIONS</em><br>
-                    U.S. District Court for the District of Delaware<br>
-                    Delaware<br>
-                    Pennsylvania<br>
-                    New Jersey (inactive)<br>
+                    <em>PROFESSIONAL/TRADE ASSOCIATIONS </em><br>
+                    Delaware Bar Association<br>
+                    Maryland Bar Association<br>
+                    Board of Directors - Associated Builders and Contractors, Delaware Chapter<br>
+                    Board of Directors - Delaware Contractor’s Association<br>
+                    Superior Court Certified Mediator<br>
                     </p>
-                    <p>
-                    <em>MEMBERSHIPS</em><br>
-                    Associated Builders and Contractors (ABC) and member Legislative and Legal Rights Committee<br>
-                    Commercial-Industrial Realty Council (CIRC)<br>
-                    Delaware Contractors’ Association (DCA)<br>
-                    Delaware State Bar Association<br>
-                    </p>
-                    <p>
-                    <em>LEADERSHIP</em><br>
-                    Committee of 100 - Board of Directors and Chair, Annual Meeting and Auction (2014, 2015)<br>
-                    Saint Edmond’s Academy - Board of Directors<br>
-                    Silverside Swim Club - Board of Directors<br>
-                    </p>
-                    <p>
-                    <em>EDUCATION</em><br>
-                    Widener University School of Law, J.D., 2001<br>
-                    Moe Levine Trial Advocacy Honor Society Member and Board Member<br>
-                    Phi Delta Phi Legal Fraternity Member<br>
-                    University of Delaware, B.S., Civil Engineering, 1995<br>
-                    </p>                  
                   </div>
                   <div class="bio-extra">
                     <img src="/images/LEESnewweb.jpg">
+                    <p>(302)&nbsp;325-3555&nbsp;x308</p>
                     <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
-                    <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    <a href="https://www.linkedin.com/in/don-logan-5532654" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
                 <a class="close-reveal-modal" aria-label="Close">&#215;</a>
@@ -130,7 +115,7 @@
               <p>(302)&nbsp;325-3555&nbsp;x311</p>
               <a href="#" class="bio" data-reveal-id="two">Read Victoria's Bio</a>
               <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
-              <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+              <a href="https://www.linkedin.com/in/victoria-petrone-a11b438" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="two" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
                   <h3 id="modalTitle">Victoria&nbsp;K.&nbsp;Petrone,&nbsp;Esquire</h3>
@@ -168,8 +153,9 @@
                   </div>
                   <div class="bio-extra">
                     <img src="/images/patrone.jpg">
+                    <p>(302)&nbsp;325-3555&nbsp;x311</p>
                     <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
-                    <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    <a href="https://www.linkedin.com/in/victoria-petrone-a11b438" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
                 <a class="close-reveal-modal" aria-label="Close">&#215;</a>
@@ -182,51 +168,47 @@
         <div class="info-block">
           <div class="inner">
             <img src="/images/LEESnewweb-sq.jpg">
-            <h3>Don L. Logan</h3>
+            <h3>George T. Lees, III</h3>
             <div class="showme">
-              <p>(302)&nbsp;325-3555&nbsp;x311</p>
-              <a href="#" class="bio" data-reveal-id="three">Read Don's Bio</a>
+              <p>(302)&nbsp;325-3555&nbsp;x310</p>
+              <a href="#" class="bio" data-reveal-id="three">Read George's Bio</a>
               <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
-              <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+              <a href="https://www.linkedin.com/in/george-lees-15b4b7118" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="three" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
-                  <h3 id="modalTitle">Don&nbsp;L.&nbsp;Logan,&nbsp;Esquire</h3>
+                  <h3 id="modalTitle">George&nbsp;T.&nbsp;Lees,&nbsp;III</h3>
                 </div>
                 <div class="bio-info">
                   <div class="bio-cv">
-                    <p>Over the past twelve years Vicky Petrone has developed a regional practice concentrated on construction law. Her clients include owners, developers, contractors, subcontractors, architects and engineers. Vicky advises clients on transactional and litigation needs including corporate formation, contract development, review and negotiation, construction defects, payment claims and mechanic’s liens, public bidding and prevailing wage law, surety claims, scheduling and delay claims, employee manuals and employment disputes, insurance coverage and claims and alternative dispute resolution. Her practice spans state and federal courts as well as private and AAA mediation and arbitration.</p>
+                    <p>George T. Lees, III concentrates his practice in the areas of product liability, premises liability, insurance coverage, workers’ compensation and environmental, mass and toxic torts.</p>
+                    <p>George earned a B.S. degree from the University of Scranton, where he was on the Dean’s List. He earned a J.D. degree from the Widener University School of Law in 1997. He is admitted to practice in states of Delaware, Pennsylvania and New Jersey and the U.S. District Court for the Eastern District of Pennsylvania, the U.S. District Court of Delaware and the U.S. Court of Appeals for the Third Circuit.</p>
+                    <p>
+                    <em>PRACTICE AREAS</em><br>
+                    Product Liability<br>
+                    Insurance Coverage<br>
+                    Casualty and Negligence<br>
+                    Workers’ Compensation<br>
+                    Environmental, Toxic and Mass Torts<br>
+                    </p>
                     <p>
                     <em>BAR ADMISSIONS</em><br>
-                    U.S. District Court for the District of Delaware<br>
-                    Delaware<br>
-                    Pennsylvania<br>
-                    New Jersey (inactive)<br>
+                    Delaware, 1997<br>
+                    Pennsylvania, 1997<br>
+                    New Jersey, 1997<br>
                     </p>
                     <p>
-                    <em>MEMBERSHIPS</em><br>
-                    Associated Builders and Contractors (ABC) and member Legislative and Legal Rights Committee<br>
-                    Commercial-Industrial Realty Council (CIRC)<br>
-                    Delaware Contractors’ Association (DCA)<br>
-                    Delaware State Bar Association<br>
-                    </p>
-                    <p>
-                    <em>LEADERSHIP</em><br>
-                    Committee of 100 - Board of Directors and Chair, Annual Meeting and Auction (2014, 2015)<br>
-                    Saint Edmond’s Academy - Board of Directors<br>
-                    Silverside Swim Club - Board of Directors<br>
-                    </p>
-                    <p>
-                    <em>EDUCATION</em><br>
-                    Widener University School of Law, J.D., 2001<br>
-                    Moe Levine Trial Advocacy Honor Society Member and Board Member<br>
-                    Phi Delta Phi Legal Fraternity Member<br>
-                    University of Delaware, B.S., Civil Engineering, 1995<br>
+                    <em>COURT ADMISSIONS</em><br>
+                    United States District Court for the District of New Jersey<br>
+                    United States District Court for the Eastern District of Pennsylvania<br>
+                    United States District Court for the District of Delaware<br>
+                    United States Court of Appeals for the Third Circuit<br>
                     </p>                  
                   </div>
                   <div class="bio-extra">
                     <img src="/images/LEESnewweb.jpg">
+                    <p>(302)&nbsp;325-3555&nbsp;x310</p>
                     <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
-                    <a href="http://linkedin.com" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    <a href="https://www.linkedin.com/in/george-lees-15b4b7118" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
                 <a class="close-reveal-modal" aria-label="Close">&#215;</a>
@@ -306,13 +288,14 @@
       </div>
       <div id="lp-info-contain">
         <div id="lp-info">
+          <img src="/images/lp-logo.png">
           <p>One Corporate Commons<br>100 Commons Boulevard, Suite 300<br>New Castle, DE 19720</p>
           <p>(302) 325-3555<br>FAX&nbsp;.&nbsp;(302) 325-3556</p>
         </div>
       </div>
       <div class="row">
           <div class="small-12 medium-12 large-12 columns">
-              <p>&copy; Copyright 2fish 2016</p>
+              <p><a href="http://2fish.com"><img src="/images/by2Fish.png" alt="2fish Web Design"></a></p>
           </div>
       </div>
     </div> <!-- END FOOTER SECTION -->
