done except for picture and maybe some fine tuning

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x308</p>
               <a href="#" class="bio" data-reveal-id="one">Read Don's Bio</a>
-              <a href="mailto:don@loganpetrone.com"><i class="fa fa-envelope-o"></i></a>
+              <a href="mailto:dlogan@loganllc.com"><i class="fa fa-envelope-o"></i></a>
               <a href="https://www.linkedin.com/in/don-logan-5532654" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="one" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
@@ -95,8 +95,9 @@
                   </div>
                   <div class="bio-extra">
                     <img src="/images/LEESnewweb.jpg">
-                    <p>(302)&nbsp;325-3555&nbsp;x308</p>
-                    <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
+                    <h4>Contact Don</h4>
+                    <p>(302)&nbsp;325-3555&nbsp;x308<br>dlogan@loganllc.com</p>
+                    <a href="mailto:dlogan@loganllc.com"><i class="fa fa-envelope-o"></i></a>
                     <a href="https://www.linkedin.com/in/don-logan-5532654" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
@@ -114,7 +115,7 @@
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x311</p>
               <a href="#" class="bio" data-reveal-id="two">Read Victoria's Bio</a>
-              <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
+              <a href="mailto:vpetrone@loganllc.com"><i class="fa fa-envelope-o"></i></a>
               <a href="https://www.linkedin.com/in/victoria-petrone-a11b438" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="two" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
@@ -153,8 +154,9 @@
                   </div>
                   <div class="bio-extra">
                     <img src="/images/patrone.jpg">
-                    <p>(302)&nbsp;325-3555&nbsp;x311</p>
-                    <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
+                    <h4>Contact Victoria</h4>
+                    <p>(302)&nbsp;325-3555&nbsp;x311<br>vpetrone@loganllc.com</p>
+                    <a href="mailto:vpetrone@loganllc.com"><i class="fa fa-envelope-o"></i></a>
                     <a href="https://www.linkedin.com/in/victoria-petrone-a11b438" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
@@ -172,7 +174,7 @@
             <div class="showme">
               <p>(302)&nbsp;325-3555&nbsp;x310</p>
               <a href="#" class="bio" data-reveal-id="three">Read George's Bio</a>
-              <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
+              <a href="mailto:glees@loganllc.com"><i class="fa fa-envelope-o"></i></a>
               <a href="https://www.linkedin.com/in/george-lees-15b4b7118" target="_blank"><i class="fa fa-linkedin-square"></i></a>
               <div id="three" class="reveal-modal bio-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <div class="bio-header">
@@ -206,8 +208,9 @@
                   </div>
                   <div class="bio-extra">
                     <img src="/images/LEESnewweb.jpg">
-                    <p>(302)&nbsp;325-3555&nbsp;x310</p>
-                    <a href="mailto:don@loganPetrone.com"><i class="fa fa-envelope-o"></i></a>
+                    <h4>Contact George</h4>
+                    <p>(302)&nbsp;325-3555&nbsp;x310<br>glees@loganllc.com</p>
+                    <a href="mailto:glees@loganllc.com"><i class="fa fa-envelope-o"></i></a>
                     <a href="https://www.linkedin.com/in/george-lees-15b4b7118" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                   </div>
                 </div>
