--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
 
     <section id="contact" class="brown-info">
       <div id="map-contain">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d49180.655512174075!2d-75.82206289999999!3d39.609391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1451485458653" frameborder="0" style="border:0" allowfullscreen></iframe>
-      </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3070.253309915!2d-75.609297949149!3d39.68900817935552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c703cdec08ee49%3A0xc44764dc37db8ad1!2sLogan+%26+Associates+LLC!5e0!3m2!1sen!2sus!4v1458829755442" frameborder="0" style="border:0" allowfullscreen></iframe>      </div>
     </section>
   
     <div class="footer-section">
