--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Logan And Petrone</title>
+    <title>Logan &amp; Petrone, Attorneys at Law | New Castle County Business Law Attorneys | Wilmington, Delaware Attorneys</title>    
+    <meta name="keywords" content="lawyer, attorney, business law, newport, delaware city, new castle, wilmington, delaware, new castle county">
+    <meta name="description" content="Attorneys at Law. New Castle County Business Law Attorneys Wilmington, Delaware and New Castle Attorneys">
+    <meta name="geo.region" content="US-DE">
+    <meta name="author" content="2Fish Design">
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href="images/favico.png">
@@ -36,8 +40,12 @@
     
     
     <div class="out-of-grid" id="home">
+      <video autoplay loop poster="/images/constr.jpg" id="bgvid">
+          <source src="/images/const-bg.mp4" type="video/mp4">
+      </video>        
       <div class="content-wrap">
         <div class="overlay-content">
+          <h1>We Do Construction</h1>
         </div>
       </div>
     	<img src="/images/tab.png">
