--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     
     <div class="out-of-grid" id="home">
-      <video autoplay loop poster="/images/constr.jpg" id="bgvid">
+      <video autoplay muted loop poster="/images/constr.jpg" id="bgvid">
           <source src="/images/const-bg.mp4" type="video/mp4">
       </video>        
       <div class="content-wrap">
