--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     </section>
   
     <div class="footer-section">
-      <form action="http://formspree.io/rwboyer@mac.com" method="post">
+      <form action="http://formspree.io/vpetrone@loganllc.com" method="post">
         <input type="hidden" name="_next" value="http://lp.netlify.com/?showModal=yes"/>
         <div id="contact-contain">
           <div class="contact-form">
